--- a/tlparty/src/components/Landing.css
+++ b/tlparty/src/components/Landing.css
@@ -21,7 +21,7 @@
     right: 5%;
     font-family: "Valorant";
     font-weight: bold;
-    font-size: calc(8vmin) !important;
+    font-size: calc(8vmin);
 }
 
 .one-liner {
